--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "meteor-node-stubs": "^0.2.3",
     "react": "15.1.0",
-    "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
